--- a/templates/home.html
+++ b/templates/home.html
@@ -4,39 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/static/home.css">
-    <title>GET YOUR CATS!!!</title>
+    <title>API Getter</title>
 </head>
 <body>
-    <div id="center-cat">
-        <img id="cat-image" src={{ img_url }} alt="random cat image"/>
-        <h1 id="name-header">{{ name }}</h1>
-        <h2 id="description">{{ description }}</h2>
-        <button id="get-cat">ACQUIRE ANOTHER GATTO</button>
+    <div id="content">
+        <form id="api-form">
+            <input name="api-url" placeholder="Enter your url here (https://)" value="{{ request.form['api-url'] }}"></input>
+            <button id="submit-button">Fetch!</button>
+        </form>
+        <p id="response">Nothing yet...</p>
     </div>
 
     <script>
-        function getCat() {
+        document.getElementById("api-form").addEventListener("submit", function(event) {
+            event.preventDefault();
             // the url_for function creates the url to the Flask endpoint
-            const cat_url = {{ url_for("acquire_cat")|tojson }};
+            const fetch_url = {{ url_for("fetch_api")|tojson }};
 
             // Calls the Flask endpoint to return a json string
-            // Then sets the image, name, and description with that json
-            fetch(cat_url)
+            // Then sets the response to that string
+            fetch(fetch_url, {
+                method: "POST",
+                body: new FormData(this)
+            })
             .then(response => response.json())
             .then((data) => {
-                let cat_img = document.getElementById("cat-image");
-                cat_img.setAttribute("src", data.img_url);
-
-                let nameHeader = document.getElementById("name-header");
-                nameHeader.innerHTML = data.name;
-
-                let desc = document.getElementById("description");
-                desc.innerHTML = data.description;
+                // formatting the json to be readable
+                let formatted = JSON.stringify(data, null, '\t');
+                document.getElementById("response").innerHTML = formatted;
             });
-        }
-
-        // bind the function to the get-cat button
-        document.getElementById("get-cat").addEventListener("click", getCat);
+        });
     </script>
 </body>
 </html>
